Compiling to a spring boot jar